--- a/hw1-cars-spec/package.json
+++ b/hw1-cars-spec/package.json
@@ -2,8 +2,9 @@
   "name": "hw1-cars-spec",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
+    "run": "npx babel --watch src --out-dir . --presets react-app/prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
